--- a/index.html
+++ b/index.html
@@ -39,17 +39,8 @@
           <nav role="navigation">
             <ul class="nav justify-content-center">
               <li class="nav-item"><a class="nav-link"
-                  href="https://www.linkedin.com/in/elza-maria-do-nascimento-fernandes-pcd-bb1060222/templateflip"
-                  title="Linkedin"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">Linkedin</span></a>
-              </li>
-              <li class="nav-item"><a class="nav-link"
-                  href="https://www.facebook.com/debora.felixdasilva.3/templateflip" title="Facebook"><i
-                    class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a>
-              </li>
-              <li class="nav-item"><a class="nav-link"
-                  href="https://www.instagram.com/deborallyon/?next=%2Ftemplateflip%2F/templateflip"
-                  title="Instagram"><i class="fab fa-instagram"></i><span
-                    class="menu-title sr-only">Instagram</span></a>
+                  href="https://www.linkedin.com/in/elza-maria-do-nascimento-fernandes-bb1060222/" title="Linkedin"><i
+                    class="fab fa-linkedin"></i><span class="menu-title sr-only">Linkedin</span></a>
               </li>
             </ul>
           </nav>
@@ -67,11 +58,11 @@
                   height="200" /></div>
             </div>
             <div class="col-lg-8 col-md-7 text-center text-md-start">
-              <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Elza Maria Do Nascimento Fernandes
-                &#40;PCD&#41; 1º</h2>
+              <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Elza Maria Do Nascimento Fernandes</h2>
               <p data-aos="fade-left" data-aos-delay="100">Gestão Financeira</p>
               <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a
-                  class="btn btn-light text-dark shadow-sm mt-1 me-1" href="Padrões WebD.pdf" target="_blank">Download
+                  class="btn btn-light text-dark shadow-sm mt-1 me-1" href="Resume Elza Maria Do Nascimento.pdf"
+                  target="_blank">Download
                   CV</a><a class="btn btn-success shadow-sm mt-1" href="#contact">Contrate-me</a></div>
             </div>
           </div>
@@ -105,7 +96,7 @@
                   <div class="pb-1">Email </div>
                 </div>
                 <div class="col-sm-8">
-                  <div class="pb-1 text-secondary">elzacouth@hotmail.com</div>
+                  <div class="pb-1 text-secondary">elzacouthy@gmail.com</div>
                 </div>
                 <div class="col-sm-4">
                   <div class="pb-1">Telefone</div>
@@ -184,11 +175,17 @@
               <div class="card-body">
                 <div class="h5 mb-1">Auxiliar Administrativo <span class="text-muted h6">na Jequiti Cosméticos</span>
                 </div>
-                <div class="text-muted text-small mb-2">Jul, 2020 - Atual</div>
-                <div>"Desempenhei um papel multifuncional que incluiu análise financeira, suporte online, análise de
-                  requisitos de negócios, auditoria interna e atendimento ao cliente. Além disso, gerenciei tarefas de
-                  backoffice, trabalhei com micro serviços e cuidei das contas a pagar, garantindo a eficiência
-                  operacional.”</div>
+                <div class="text-muted text-small mb-2">Jul, 2020 - Março, 2024</div>
+                <div>"Responsável pela experiência do cliente e acompanhamento de demandas do pós-venda. Realizo o
+                  acompanhamento da célula de atendimento do E-commerce (BackOffice interno) e do Call center
+                  (BackOffice externo) nas demandas diárias de Marketplaces, Redes Sociais, SAC e Chargeback, entre
+                  outras atividades administrativas e analíticas.
+
+                  Como Assistente de BackOffice de vendas do E-commerce, atuo nas plataformas Reclame Aqui, Procon,
+                  Consumidor.Gov e E-mail. Além disso, sou responsável pela análise do atendimento realizado através
+                  do Cal Center, envio de relatórios e planilhas para outras áreas específicas, bem como pelo envio de
+                  estornos e reembolsos ao financeiro. Possuo conhecimento nos sistemas RightNow, SGI e Oracle EBS."
+                </div>
               </div>
             </div>
             <div class="timeline-card timeline-card-primary card shadow-sm">
@@ -196,8 +193,10 @@
                 <div class="h5 mb-1">Operadora de Atendimento ao Cliente <span class="text-muted h6">na B2W
                     Digital</span></div>
                 <div class="text-muted text-small mb-2">Out, 2018 - Fevereiro, 2020</div>
-                <div>"Atuei como Operadora de Atendimento ao Cliente, onde gerenciei comunicações multicanais, incluindo
-                  chat e e-mail, e executei tarefas de backoffice, garantindo um serviço ao cliente eficiente e de alta
+                <div>"Atuei como Operadora de Atendimento ao Cliente, onde gerenciei comunicações multicanais,
+                  incluindo
+                  chat e e-mail, e executei tarefas de backoffice, garantindo um serviço ao cliente eficiente e de
+                  alta
                   qualidade.”</div>
               </div>
             </div>
@@ -225,7 +224,8 @@
                   </span></div>
                 <div class="text-muted text-small mb-2">2023 - Cursando</div>
                 <div> "Adquirindo uma sólida compreensão dos princípios financeiros e das práticas de gestão. Estou
-                  desenvolvendo habilidades em análise financeira, planejamento estratégico e tomada de decisões baseada
+                  desenvolvendo habilidades em análise financeira, planejamento estratégico e tomada de decisões
+                  baseada
                   em dados. Além disso, estou ganhando conhecimento em áreas como contabilidade, economia, gestão de
                   riscos e investimentos. Estou ansiosa para aplicar essas habilidades e conhecimentos em um ambiente
                   profissional.”</div>
@@ -257,17 +257,8 @@
           <nav role="navigation">
             <ul class="nav justify-content-center">
               <li class="nav-item"><a class="nav-link"
-                  href="https://www.linkedin.com/in/elza-maria-do-nascimento-fernandes-pcd-bb1060222/templateflip"
-                  title="Linkedin"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">linkedin</span></a>
-              </li>
-              <li class="nav-item"><a class="nav-link"
-                  href="https://www.facebook.com/debora.felixdasilva.3/templateflip" title="Facebook"><i
-                    class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a>
-              </li>
-              <li class="nav-item"><a class="nav-link"
-                  href="https://www.instagram.com/deborallyon/?next=%2Ftemplateflip%2F/templateflip"
-                  title="Instagram"><i class="fab fa-instagram"></i><span
-                    class="menu-title sr-only">Instagram</span></a>
+                  href="https://www.linkedin.com/in/elza-maria-do-nascimento-fernandes-bb1060222/" title="Linkedin"><i
+                    class="fab fa-linkedin"></i><span class="menu-title sr-only">linkedin</span></a>
               </li>
             </ul>
           </nav>
@@ -275,7 +266,7 @@
       </div>
       <div class="text-small">
         <div class="mb-1">&copy; Right Resume. All rights reserved.</div>
-        <div>Rede - <a href="https://www.linkedin.com/in/elza-maria-do-nascimento-fernandes-pcd-bb1060222/templateflip"
+        <div>Rede - <a href="https://www.linkedin.com/in/elza-maria-do-nascimento-fernandes-bb1060222/"
             target="_blank">Linkedin</a></div>
       </div>
     </div>
